tests/negative/comptime/untagged_sum_type.orng
fn main() -> Int {
    let x = comptime {
        let mut y: @Untagged(?Int) = undefined
        y.some = 4
        y
    }
    4
}